[gd_scene load_steps=6 format=3 uid="uid://di75nnsxbxkff"]

[ext_resource type="Script" uid="uid://csrxwuwl5yb2q" path="res://scenes/GameOverMenu.gd" id="1_prwox"]
[ext_resource type="Texture2D" uid="uid://4m4ahmkebk6" path="res://UI_Sprite.png" id="2_4j5i6"]
[ext_resource type="FontFile" uid="uid://dg6iivcilg3ml" path="res://alagard.ttf" id="2_wp3el"]
[ext_resource type="Theme" uid="uid://cwe4xop3am2ut" path="res://scenes/theme.tres" id="3_isdfh"]

[sub_resource type="Theme" id="Theme_jbj1t"]

[node name="GameOverMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prwox")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -394.0
offset_top = -272.0
offset_right = 394.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4j5i6")
region_rect = Rect2(175, 0, 81, 70)
patch_margin_left = 15
patch_margin_top = 22
patch_margin_right = 16
patch_margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.5
offset_top = -215.0
offset_right = 318.5
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_isdfh")
theme_override_constants/separation = 23
alignment = 1

[node name="RestartButton" type="Button" parent="NinePatchRect/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_jbj1t")
theme_override_fonts/font = ExtResource("2_wp3el")
theme_override_font_sizes/font_size = 60
text = "Restart"

[node name="OptionsButton" type="Button" parent="NinePatchRect/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_jbj1t")
theme_override_fonts/font = ExtResource("2_wp3el")
theme_override_font_sizes/font_size = 60
text = "Settings"

[node name="MainMenuButton" type="Button" parent="NinePatchRect/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wp3el")
theme_override_font_sizes/font_size = 60
text = "Main Menu"

[node name="ExitButton" type="Button" parent="NinePatchRect/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_jbj1t")
theme_override_fonts/font = ExtResource("2_wp3el")
theme_override_font_sizes/font_size = 60
text = "Quit Game"

[connection signal="pressed" from="NinePatchRect/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
